tests/baselines/reference/genericCallWithObjectTypeArgsAndIndexers.errors.txt
genericCallWithObjectTypeArgsAndIndexers.ts(9,5): error TS2413: 'number' index type 'Date' is not assignable to 'string' index type 'Object'.
genericCallWithObjectTypeArgsAndIndexers.ts(16,9): error TS2413: 'number' index type 'T' is not assignable to 'string' index type 'Object'.


==== genericCallWithObjectTypeArgsAndIndexers.ts (2 errors) ====
    // Type inference infers from indexers in target type, no errors expected
    
    function foo<T>(x: T) {
        return x;
    }
    
    var a: {
        [x: string]: Object;
        [x: number]: Date;
        ~~~~~~~~~~~~~~~~~~
!!! error TS2413: 'number' index type 'Date' is not assignable to 'string' index type 'Object'.
    };
    var r = foo(a);
    
    function other<T extends Date>(arg: T) {
        var b: {
            [x: string]: Object;
            [x: number]: T
            ~~~~~~~~~~~~~~
!!! error TS2413: 'number' index type 'T' is not assignable to 'string' index type 'Object'.
        };
        var r2 = foo(b);
        var d = r2[1]; 
        var e = r2['1']; 
    }